--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,5 @@
  */
 // Make sure the project name is the module name.
 // This is what will be used to decide what testsuites will be run by Crio.
-rootProject.name = 'BUILDOUT_QA'
+rootProject.name = 'buildoutsqa'
 include 'buildout'
