"ME_BUILDOUT_QA_MODULE_NOSQL"

--- a/buildout/build.gradle
+++ b/buildout/build.gradle
@@ -80,6 +80,8 @@ dependencies {
 sourceSets {
     test {
         java.srcDirs = ['java/com/crio/buildouts/buildoutsqa']
+        java.srcDirs = ['java/com/crio/buildouts/integ/test']
+
     }
 }
 
