--- a/buildout/src/main/resources/application.properties
+++ b/buildout/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8081
 logging.level.org.springframework.web=ERROR
 logging.level.controllers.Application=ERROR
-#logging.file=quiz_logfile_test.log
+#logging.file=question_logfile.log
 management.server.ssl.enabled=false
-spring.data.mongodb.uri=mongodb://localhost:27017/quiz-database?authSource=admin
+spring.data.mongodb.uri=mongodb://localhost:27017/question-database?authSource=admin
 spring.data.mongodb.field-naming-strategy=org.springframework.data.mapping.model.SnakeCaseFieldNamingStrategy
 # logging.level.org.springframework.boot.autoconfigure.mongo.embedded=INFO
 # logging.level.org.mongodb=INFO
