--- a/buildout/src/test/resources/application.properties
+++ b/buildout/src/test/resources/application.properties
@@ -4,6 +4,6 @@ logging.level.controllers.Application=ERROR
 #logging.file=quiz_logfile_test.log
 management.server.ssl.enabled=false
 spring.data.mongodb.uri=mongodb://localhost:27017/quiz-database?authSource=admin
-spring.data.mongodb.field-naming-strategy=org.springframework.data.mapping.model.SnakeCaseFieldNamingStrategy
+#spring.data.mongodb.field-naming-strategy=org.springframework.data.mapping.model.SnakeCaseFieldNamingStrategy
 # logging.level.org.springframework.boot.autoconfigure.mongo.embedded=INFO
 # logging.level.org.mongodb=INFO
